// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getData volume get all volumes 1`] = `
Immutable.Map {
  "6c507d7f-660b-41cb-b2c5-63d521a28a5c": Immutable.Record {
    "id": "6c507d7f-660b-41cb-b2c5-63d521a28a5c",
    "title": "Tome VI (12-13)",
    "number": 6,
    "date": "2013-06-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51F6C3joThL.jpg",
    "isbn": "9782351428863",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "f0bc0f76-bddf-4af8-a589-0d877aae9235": Immutable.Record {
    "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
    "title": "Tome 7",
    "number": 7,
    "date": "2007-12-07",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
    "isbn": "9782505001997",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "b9a4ab06-bf43-47ca-950c-c973b6b18f87": Immutable.Record {
    "id": "b9a4ab06-bf43-47ca-950c-c973b6b18f87",
    "title": "Tome 21",
    "number": 21,
    "date": "2009-07-02",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51PDZv8zolL.jpg",
    "isbn": "9782351424285",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "a2280876-7082-48b5-bab3-34c4e5eab279": Immutable.Record {
    "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
    "title": "Tome 6",
    "number": 6,
    "date": "2007-10-05",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
    "isbn": "9782505001812",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "fa7a1162-d9e3-462f-a367-8371a55f7c94": Immutable.Record {
    "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
    "title": "Tome 3",
    "number": 3,
    "date": "2007-04-05",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
    "isbn": "9782505000792",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "79bee76a-01fd-4fd3-b3e2-690a969780b7": Immutable.Record {
    "id": "79bee76a-01fd-4fd3-b3e2-690a969780b7",
    "title": "Tome VIII (16-17)",
    "number": 8,
    "date": "2013-12-12",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/5110gRxSqXL.jpg",
    "isbn": "9782351428993",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "11d1491e-22d4-49f1-b29f-78007493d4e6": Immutable.Record {
    "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
    "title": "Tome 2",
    "number": 2,
    "date": "2007-02-01",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
    "isbn": "9782505000426",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "8d5329c8-2ad5-4713-8961-84f2e42a61c6": Immutable.Record {
    "id": "8d5329c8-2ad5-4713-8961-84f2e42a61c6",
    "title": "Tome I (1-2-3)",
    "number": 1,
    "date": "2012-03-08",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51MOHY8mkuL.jpg",
    "isbn": "9782351427552",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "1fcc0860-bade-4c4c-9554-765af0f6c3a5": Immutable.Record {
    "id": "1fcc0860-bade-4c4c-9554-765af0f6c3a5",
    "title": "TOME XIII (26-27)",
    "number": 13,
    "date": "2015-09-10",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51maVan7OVL.jpg",
    "isbn": "9782368521298",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "a88bec8c-f793-4b18-858a-843e4da8d97b": Immutable.Record {
    "id": "a88bec8c-f793-4b18-858a-843e4da8d97b",
    "title": "Tome 22",
    "number": 22,
    "date": "2009-11-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51gKyIdz4HL.jpg",
    "isbn": "9782351424483",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e": Immutable.Record {
    "id": "ebdca7a2-8f86-4c64-a30a-86cdfb71ba7e",
    "title": "Tome 19",
    "number": 19,
    "date": "2008-12-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51AJQx-WJTL.jpg",
    "isbn": "9782351423356",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "aa321497-4302-4d2e-bee2-997cc67d915c": Immutable.Record {
    "id": "aa321497-4302-4d2e-bee2-997cc67d915c",
    "title": "Tome 16",
    "number": 16,
    "date": "2008-03-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZPmK0lQ5L.jpg",
    "isbn": "9782351422656",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "b70e06ed-3004-4987-8974-d9270c623cb9": Immutable.Record {
    "id": "b70e06ed-3004-4987-8974-d9270c623cb9",
    "title": "Tome 17",
    "number": 17,
    "date": "2008-05-15",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51U2mxsRMBL.jpg",
    "isbn": "9782351423189",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "9e207271-9b78-401b-88f1-50b3432ea0cd": Immutable.Record {
    "id": "9e207271-9b78-401b-88f1-50b3432ea0cd",
    "title": "Tome 20",
    "number": 20,
    "date": "2009-04-09",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51JbyQkx8mL.jpg",
    "isbn": "9782351424117",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "22549c4a-290c-4ad7-b73f-ca9b10aa41b0": Immutable.Record {
    "id": "22549c4a-290c-4ad7-b73f-ca9b10aa41b0",
    "title": "Tome 5",
    "number": 5,
    "date": "2006-03-09",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51PHT8RQ3XL.jpg",
    "isbn": "9782351420454",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "ec9d0282-78a1-491e-bd1e-a937b332c56f": Immutable.Record {
    "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
    "title": "Tome 6",
    "number": 6,
    "date": "2011-05-06",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
    "isbn": "9782505010951",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "5e336e2a-794f-43e3-b299-10eb2020fa73": Immutable.Record {
    "id": "5e336e2a-794f-43e3-b299-10eb2020fa73",
    "title": "Tome 7",
    "number": 7,
    "date": "2006-07-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51BNYNYRCHL.jpg",
    "isbn": "9782351420478",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "3ed9c57c-f69a-4898-99b1-27fd2bb4bb89": Immutable.Record {
    "id": "3ed9c57c-f69a-4898-99b1-27fd2bb4bb89",
    "title": "Tome 24",
    "number": 24,
    "date": "2010-09-09",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51MUDCoa2%2BL.jpg",
    "isbn": "9782351425497",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "69fed8ee-a500-4bde-9ba2-458f639785d1": Immutable.Record {
    "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
    "title": "Tome 4",
    "number": 4,
    "date": "2011-01-07",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
    "isbn": "9782505010326",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "7407fb12-e182-400d-936e-0b807635c26e": Immutable.Record {
    "id": "7407fb12-e182-400d-936e-0b807635c26e",
    "title": "Tome 18",
    "number": 18,
    "date": "2008-09-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51Yqa-BwdeL.jpg",
    "isbn": "9782351423257",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "c1995831-6447-43e9-869b-74f2cf93966d": Immutable.Record {
    "id": "c1995831-6447-43e9-869b-74f2cf93966d",
    "title": "Tome 10",
    "number": 10,
    "date": "2008-06-06",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
    "isbn": "9782505003038",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "a4477f49-cff1-4913-bd39-68fefbc10479": Immutable.Record {
    "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
    "title": "Tome 11",
    "number": 11,
    "date": "2008-07-04",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
    "isbn": "9782505003694",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "ab0808c6-83d3-4c23-b4f3-3d9375a94424": Immutable.Record {
    "id": "ab0808c6-83d3-4c23-b4f3-3d9375a94424",
    "title": "Tome IX (18-19)",
    "number": 9,
    "date": "2014-03-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51KTyJvBA3L.jpg",
    "isbn": "9782351429884",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "87adf237-5a75-4389-9c5e-66a0aa17be9a": Immutable.Record {
    "id": "87adf237-5a75-4389-9c5e-66a0aa17be9a",
    "title": "Tome 11",
    "number": 11,
    "date": "2007-03-08",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51pBQ9Fa7qL.jpg",
    "isbn": "9782351421512",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "11606764-7aee-4e33-9df1-e9dc5298eda8": Immutable.Record {
    "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
    "title": "Tome 12",
    "number": 12,
    "date": "2008-10-02",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
    "isbn": "9782505004295",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "0c34b2b6-15ac-4f36-bdb1-87cbebe87d53": Immutable.Record {
    "id": "0c34b2b6-15ac-4f36-bdb1-87cbebe87d53",
    "title": "Tome 8",
    "number": 8,
    "date": "2006-03-14",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/518dhvDM77L.jpg",
    "isbn": "9782351420485",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "4b155570-e2bc-44e8-8f92-f66ac55e72b0": Immutable.Record {
    "id": "4b155570-e2bc-44e8-8f92-f66ac55e72b0",
    "title": "Tome 15",
    "number": 15,
    "date": "2007-11-08",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51o0y0uZgWL.jpg",
    "isbn": "9782351421598",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "70f353f8-3374-43c1-a681-19dbf9fa3c2e": Immutable.Record {
    "id": "70f353f8-3374-43c1-a681-19dbf9fa3c2e",
    "title": "Tome 6",
    "number": 6,
    "date": "2006-05-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/518GTC3WXZL.jpg",
    "isbn": "9782351420461",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "9f016317-2b39-4daa-8f7a-d936616b2473": Immutable.Record {
    "id": "9f016317-2b39-4daa-8f7a-d936616b2473",
    "title": "Tome 12",
    "number": 12,
    "date": "2007-05-10",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/516r%2BFE%2BHdL.jpg",
    "isbn": "9782351421567",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "b87423f2-71d7-4be4-8fdc-bc396708ee63": Immutable.Record {
    "id": "b87423f2-71d7-4be4-8fdc-bc396708ee63",
    "title": "Tome II (4-5)",
    "number": 2,
    "date": "2012-03-08",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51CscZC9c-L.jpg",
    "isbn": "9782351427521",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "ae4cc5d7-d42d-41f6-80c1-8c6aa432d078": Immutable.Record {
    "id": "ae4cc5d7-d42d-41f6-80c1-8c6aa432d078",
    "title": "Tome 27",
    "number": 27,
    "date": "2011-07-07",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/5180gk8s3ML.jpg",
    "isbn": "9782351426517",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "3a03733c-1a5a-4673-9299-28e5cc82a8af": Immutable.Record {
    "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
    "title": "Tome 2",
    "number": 2,
    "date": "2010-09-03",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
    "isbn": "9782505009061",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "f6e73e4f-1695-42e1-87a0-0cea8c66c935": Immutable.Record {
    "id": "f6e73e4f-1695-42e1-87a0-0cea8c66c935",
    "title": "Tome IV (8-9)",
    "number": 4,
    "date": "2012-12-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51VA-uGoFTL.jpg",
    "isbn": "9782351428016",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "58715dcb-ce62-4b8c-a6b0-6412310b12ff": Immutable.Record {
    "id": "58715dcb-ce62-4b8c-a6b0-6412310b12ff",
    "title": "Tome 9",
    "number": 9,
    "date": "2006-11-09",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51N7A347E8L.jpg",
    "isbn": "9782351420492",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "6aaa945f-074c-4a4f-9662-15e7a8d70a73": Immutable.Record {
    "id": "6aaa945f-074c-4a4f-9662-15e7a8d70a73",
    "title": "Tome III (6-7)",
    "number": 3,
    "date": "2012-09-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51oDm7wFRML.jpg",
    "isbn": "9782351428009",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "0a914a8f-18fc-4103-9385-4b888714ec30": Immutable.Record {
    "id": "0a914a8f-18fc-4103-9385-4b888714ec30",
    "title": "TOME XII (24-25)",
    "number": 12,
    "date": "2015-05-15",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZchWkPawL.jpg",
    "isbn": "9782368521281",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "98739f45-b46a-41cb-822d-fc9953dc5fc1": Immutable.Record {
    "id": "98739f45-b46a-41cb-822d-fc9953dc5fc1",
    "title": "Tome VII (14-15)",
    "number": 7,
    "date": "2013-09-12",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51HnB19v8xL.jpg",
    "isbn": "9782351428986",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "8dfb2e62-fa73-4570-9d8a-1647e7ee4e48": Immutable.Record {
    "id": "8dfb2e62-fa73-4570-9d8a-1647e7ee4e48",
    "title": "Tome X (20-21)",
    "number": 10,
    "date": "2014-08-28",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51yYF6FeaXL.jpg",
    "isbn": "9782351429891",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "97d6078e-b650-412a-981d-311859f62e50": Immutable.Record {
    "id": "97d6078e-b650-412a-981d-311859f62e50",
    "title": "Tome 3",
    "number": 3,
    "date": "2005-11-10",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/4170GPPT93L.jpg",
    "isbn": "9782351420195",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "b95ab092-9baf-4feb-b8f1-e79b449b9c54": Immutable.Record {
    "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
    "title": "Tome 5",
    "number": 5,
    "date": "2007-08-24",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
    "isbn": "9782505001614",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "d13f21d4-eee6-4b45-bb1c-ce1a8c746613": Immutable.Record {
    "id": "d13f21d4-eee6-4b45-bb1c-ce1a8c746613",
    "title": "Tome 4",
    "number": 4,
    "date": "2006-01-12",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51Z7FVQZ7EL.jpg",
    "isbn": "9782351420416",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "6bc33a10-08e7-448c-9608-91ce041f411c": Immutable.Record {
    "id": "6bc33a10-08e7-448c-9608-91ce041f411c",
    "title": "Tome 14",
    "number": 14,
    "date": "2007-09-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/5166lgh93xL.jpg",
    "isbn": "9782351421581",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "031b0651-488e-4926-be9c-7a3ccfcc9af7": Immutable.Record {
    "id": "031b0651-488e-4926-be9c-7a3ccfcc9af7",
    "title": "Tome 23",
    "number": 23,
    "date": "2010-04-08",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51nhgwjPE8L.jpg",
    "isbn": "9782351425077",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3": Immutable.Record {
    "id": "4b3ecb6e-a082-49dc-8c9e-848a54c3ccb3",
    "title": "Tome 2",
    "number": 2,
    "date": "2005-09-08",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51s8zCicyrL.jpg",
    "isbn": "9782351420188",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "081648ff-1b14-4af7-b8f0-9e97b0ba6804": Immutable.Record {
    "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
    "title": "Tome 13",
    "number": 13,
    "date": "2009-09-18",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
    "isbn": "9782505004523",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "12b5dc0d-253a-41dd-bbee-e1f31e947eb1": Immutable.Record {
    "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
    "title": "Tome 8",
    "number": 8,
    "date": "2008-02-15",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
    "isbn": "9782505002697",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb": Immutable.Record {
    "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
    "title": "Tome 4",
    "number": 4,
    "date": "2007-05-31",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
    "isbn": "9782505001065",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "dbab2483-2d3c-4832-9993-b6efbd765787": Immutable.Record {
    "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
    "title": "Tome 1",
    "number": 1,
    "date": "2010-07-02",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
    "isbn": "9782505009054",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "73f6690b-716b-4659-97f5-d66ce10acd8a": Immutable.Record {
    "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
    "title": "Tome 9",
    "number": 9,
    "date": "2008-04-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
    "isbn": "9782505002970",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "0354b860-d994-4fb2-b649-ca8c494a26f6": Immutable.Record {
    "id": "0354b860-d994-4fb2-b649-ca8c494a26f6",
    "title": "Tome XI (22-23)",
    "number": 11,
    "date": "2014-12-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51VgR6QYSWL.jpg",
    "isbn": "9782351429907",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "ee7075c0-ff5a-44b0-a832-02a0c2d97151": Immutable.Record {
    "id": "ee7075c0-ff5a-44b0-a832-02a0c2d97151",
    "title": "Tome 25",
    "number": 25,
    "date": "2011-01-13",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51QJSQxrRHL.jpg",
    "isbn": "9782351425732",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32": Immutable.Record {
    "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
    "title": "Tome 3",
    "number": 3,
    "date": "2010-11-05",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
    "isbn": "9782505009986",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "ff15ae7e-fcfe-4061-a27b-3b481e5f313c": Immutable.Record {
    "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
    "title": "Tome 1",
    "number": 1,
    "date": "2007-01-18",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
    "isbn": "9782505000327",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "29cac096-a063-41c2-82d0-7be9a957ca73": Immutable.Record {
    "id": "29cac096-a063-41c2-82d0-7be9a957ca73",
    "title": "Tome 10",
    "number": 10,
    "date": "2007-01-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51%2BMB-tOfVL.jpg",
    "isbn": "9782351421475",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "ef282203-2ef5-4972-9598-d365fe7ff09c": Immutable.Record {
    "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
    "title": "Tome 5",
    "number": 5,
    "date": "2011-03-04",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
    "isbn": "9782505010692",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "37b02128-ba53-448b-9cc7-14f0e7225d8b": Immutable.Record {
    "id": "37b02128-ba53-448b-9cc7-14f0e7225d8b",
    "title": "Tome 13",
    "number": 13,
    "date": "2007-07-12",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51sGW14FPOL.jpg",
    "isbn": "9782351421574",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "e31288f3-a313-4a9b-a193-857a9fb227ab": Immutable.Record {
    "id": "e31288f3-a313-4a9b-a193-857a9fb227ab",
    "title": "Tome 1",
    "number": 1,
    "date": "2005-09-08",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51-4u%2B8MwSL.jpg",
    "isbn": "9782351420171",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
  "9ce1636f-8f64-4de9-a7c8-fc51de1892d8": Immutable.Record {
    "id": "9ce1636f-8f64-4de9-a7c8-fc51de1892d8",
    "title": "Tome V (10-11)",
    "number": 5,
    "date": "2013-03-14",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/516OCcGCm9L.jpg",
    "isbn": "9782351428740",
    "edition_id": "d42c9391-c92f-4485-a772-8df06d70ed17",
    "content": null,
  },
  "d73221df-c228-4d34-9c44-a599e861d27a": Immutable.Record {
    "id": "d73221df-c228-4d34-9c44-a599e861d27a",
    "title": "Tome 26",
    "number": 26,
    "date": "2011-04-14",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51XhvMFwHuL.jpg",
    "isbn": "9782351426319",
    "edition_id": "ffdf56ae-058d-49c6-80c6-336471a73dcc",
    "content": null,
  },
}
`;

exports[`getData volume get volume with id 1`] = `
Immutable.Record {
  "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
  "title": "Tome 1",
  "number": 1,
  "date": "2007-01-18",
  "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
  "isbn": "9782505000327",
  "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
  "content": null,
}
`;

exports[`getData volume get volumes ids edition_id 1`] = `
Immutable.OrderedSet [
  "ec9d0282-78a1-491e-bd1e-a937b332c56f",
  "ef282203-2ef5-4972-9598-d365fe7ff09c",
  "69fed8ee-a500-4bde-9ba2-458f639785d1",
  "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
  "3a03733c-1a5a-4673-9299-28e5cc82a8af",
  "dbab2483-2d3c-4832-9993-b6efbd765787",
]
`;

exports[`getData volume get volumes ids edition_id doesn't exist 1`] = `Immutable.OrderedSet []`;

exports[`getData volume get volumes with edition_id 1`] = `
Immutable.Map {
  "ec9d0282-78a1-491e-bd1e-a937b332c56f": Immutable.Record {
    "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
    "title": "Tome 6",
    "number": 6,
    "date": "2011-05-06",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
    "isbn": "9782505010951",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "ef282203-2ef5-4972-9598-d365fe7ff09c": Immutable.Record {
    "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
    "title": "Tome 5",
    "number": 5,
    "date": "2011-03-04",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
    "isbn": "9782505010692",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "69fed8ee-a500-4bde-9ba2-458f639785d1": Immutable.Record {
    "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
    "title": "Tome 4",
    "number": 4,
    "date": "2011-01-07",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
    "isbn": "9782505010326",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32": Immutable.Record {
    "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
    "title": "Tome 3",
    "number": 3,
    "date": "2010-11-05",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
    "isbn": "9782505009986",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "3a03733c-1a5a-4673-9299-28e5cc82a8af": Immutable.Record {
    "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
    "title": "Tome 2",
    "number": 2,
    "date": "2010-09-03",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
    "isbn": "9782505009061",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "dbab2483-2d3c-4832-9993-b6efbd765787": Immutable.Record {
    "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
    "title": "Tome 1",
    "number": 1,
    "date": "2010-07-02",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
    "isbn": "9782505009054",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
}
`;

exports[`getData volume get volumes with edition_id doesn't exist 1`] = `Immutable.Map {}`;

exports[`getData volume get volumes with series_id 1`] = `
Immutable.Map {
  "f0bc0f76-bddf-4af8-a589-0d877aae9235": Immutable.Record {
    "id": "f0bc0f76-bddf-4af8-a589-0d877aae9235",
    "title": "Tome 7",
    "number": 7,
    "date": "2007-12-07",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61qgonxtZOL.jpg",
    "isbn": "9782505001997",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "a2280876-7082-48b5-bab3-34c4e5eab279": Immutable.Record {
    "id": "a2280876-7082-48b5-bab3-34c4e5eab279",
    "title": "Tome 6",
    "number": 6,
    "date": "2007-10-05",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ccrw7ky1L.jpg",
    "isbn": "9782505001812",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "fa7a1162-d9e3-462f-a367-8371a55f7c94": Immutable.Record {
    "id": "fa7a1162-d9e3-462f-a367-8371a55f7c94",
    "title": "Tome 3",
    "number": 3,
    "date": "2007-04-05",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61fiEjVbUbL.jpg",
    "isbn": "9782505000792",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "11d1491e-22d4-49f1-b29f-78007493d4e6": Immutable.Record {
    "id": "11d1491e-22d4-49f1-b29f-78007493d4e6",
    "title": "Tome 2",
    "number": 2,
    "date": "2007-02-01",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61DduSmdKGL.jpg",
    "isbn": "9782505000426",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "ec9d0282-78a1-491e-bd1e-a937b332c56f": Immutable.Record {
    "id": "ec9d0282-78a1-491e-bd1e-a937b332c56f",
    "title": "Tome 6",
    "number": 6,
    "date": "2011-05-06",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41FBONjMi4L.jpg",
    "isbn": "9782505010951",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "69fed8ee-a500-4bde-9ba2-458f639785d1": Immutable.Record {
    "id": "69fed8ee-a500-4bde-9ba2-458f639785d1",
    "title": "Tome 4",
    "number": 4,
    "date": "2011-01-07",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41lRggimfJL.jpg",
    "isbn": "9782505010326",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "c1995831-6447-43e9-869b-74f2cf93966d": Immutable.Record {
    "id": "c1995831-6447-43e9-869b-74f2cf93966d",
    "title": "Tome 10",
    "number": 10,
    "date": "2008-06-06",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61OEH0gsrIL.jpg",
    "isbn": "9782505003038",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "a4477f49-cff1-4913-bd39-68fefbc10479": Immutable.Record {
    "id": "a4477f49-cff1-4913-bd39-68fefbc10479",
    "title": "Tome 11",
    "number": 11,
    "date": "2008-07-04",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/618b1GXgGFL.jpg",
    "isbn": "9782505003694",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "11606764-7aee-4e33-9df1-e9dc5298eda8": Immutable.Record {
    "id": "11606764-7aee-4e33-9df1-e9dc5298eda8",
    "title": "Tome 12",
    "number": 12,
    "date": "2008-10-02",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61XFUTPtQdL.jpg",
    "isbn": "9782505004295",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "3a03733c-1a5a-4673-9299-28e5cc82a8af": Immutable.Record {
    "id": "3a03733c-1a5a-4673-9299-28e5cc82a8af",
    "title": "Tome 2",
    "number": 2,
    "date": "2010-09-03",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51KMP3phtGL.jpg",
    "isbn": "9782505009061",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "b95ab092-9baf-4feb-b8f1-e79b449b9c54": Immutable.Record {
    "id": "b95ab092-9baf-4feb-b8f1-e79b449b9c54",
    "title": "Tome 5",
    "number": 5,
    "date": "2007-08-24",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61bXKQlOllL.jpg",
    "isbn": "9782505001614",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "081648ff-1b14-4af7-b8f0-9e97b0ba6804": Immutable.Record {
    "id": "081648ff-1b14-4af7-b8f0-9e97b0ba6804",
    "title": "Tome 13",
    "number": 13,
    "date": "2009-09-18",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51JrRDR1ANL.jpg",
    "isbn": "9782505004523",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "12b5dc0d-253a-41dd-bbee-e1f31e947eb1": Immutable.Record {
    "id": "12b5dc0d-253a-41dd-bbee-e1f31e947eb1",
    "title": "Tome 8",
    "number": 8,
    "date": "2008-02-15",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51ZlUQFdaPL.jpg",
    "isbn": "9782505002697",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb": Immutable.Record {
    "id": "e7dbccb5-4710-446b-8c08-d35fb8a1eaeb",
    "title": "Tome 4",
    "number": 4,
    "date": "2007-05-31",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/611d8aPhqhL.jpg",
    "isbn": "9782505001065",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "dbab2483-2d3c-4832-9993-b6efbd765787": Immutable.Record {
    "id": "dbab2483-2d3c-4832-9993-b6efbd765787",
    "title": "Tome 1",
    "number": 1,
    "date": "2010-07-02",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/413rEPunmPL.jpg",
    "isbn": "9782505009054",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "73f6690b-716b-4659-97f5-d66ce10acd8a": Immutable.Record {
    "id": "73f6690b-716b-4659-97f5-d66ce10acd8a",
    "title": "Tome 9",
    "number": 9,
    "date": "2008-04-11",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/61jqfMbZ8VL.jpg",
    "isbn": "9782505002970",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32": Immutable.Record {
    "id": "7ac3f560-bb02-4a9e-9e01-67cc2e2b9d32",
    "title": "Tome 3",
    "number": 3,
    "date": "2010-11-05",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41mLoqm6D0L.jpg",
    "isbn": "9782505009986",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
  "ff15ae7e-fcfe-4061-a27b-3b481e5f313c": Immutable.Record {
    "id": "ff15ae7e-fcfe-4061-a27b-3b481e5f313c",
    "title": "Tome 1",
    "number": 1,
    "date": "2007-01-18",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/51eBp6XUd5L.jpg",
    "isbn": "9782505000327",
    "edition_id": "5482eba9-2773-40d8-82f7-1870b1b2a3e9",
    "content": null,
  },
  "ef282203-2ef5-4972-9598-d365fe7ff09c": Immutable.Record {
    "id": "ef282203-2ef5-4972-9598-d365fe7ff09c",
    "title": "Tome 5",
    "number": 5,
    "date": "2011-03-04",
    "img": "https://images-eu.ssl-images-amazon.com/images/I/41%2BDT%2B3-rwL.jpg",
    "isbn": "9782505010692",
    "edition_id": "908612fd-1cc7-4780-aea4-63d3ac04c6bd",
    "content": null,
  },
}
`;
